SCIP version NEXT
=================


SCIP version 5.0.0
==================

features:
- add new heuristic MPEC that solves a MPEC reformulation of a mixed-binary nonlinear problem by regularized NLP reformulations
- new numerical solution violations get printed when checksol is called
- three bandit selection algorithms to face sequential decision problems under uncertainty
- new primal heuristic ALNS that orchestrates eight different LNS heuristics adaptively
  using algorithms for the multi-armed bandit problem
- added analysis of the clique table which identifies possible aggregations via the search for
  strongly connected components and may detect infeasible assignments on the way
- SCIP can now automatically detect and compute symmetries in MIPs (if a graph automorphism code is linked in)
- added presol_symmetry.c for computing and storing symmetry information of a MIP
- added new propagator orbital fixing
- added cons_symresack.c to handle permutation symmetries in a binary programs via inequalities and propagation
- added cons_orbisack.c to handle special permutation symmetries in a binary programs via inequalities and propagation
- added presol_symbreak.c to detect special symmetry structures and to add symmetry handling constraints
- cons_orbitope.c can now handle full orbitopes as well
- added new plugin type "table" for adding user-defined statistics tables
- new presolving plugin presol_sparsify that tries to cancel nonzero coefficients in linear constraints by adding
  multiples of linear equalities
- utilizing linear inequalities to compute stronger linearizations for bilinear terms; the inequalities are computed in
  the OBBT propagator
- added macros to do computations with a higher precision by using double-double arithmetic
- added API for aggregating rows for generating cuts which uses double-double arithmetic internally
- new methods and interactive shell functionality to display linear constraint classification types;