@@ -87,6 +87,7 @@ SCIP_RETCODE SCIPvisualCreate(
    (*visual)->lastnode = NULL;
    (*visual)->lastcolor = SCIP_VBCCOLOR_NONE;
    (*visual)->userealtime = FALSE;
+   (*visual)->lastlowerbound = SCIP_INVALID;
 
    return SCIP_OKAY;
 }
@@ -118,6 +119,8 @@ SCIP_RETCODE SCIPvisualInit(
    assert( set->visual_vbcfilename != NULL );
    assert( set->visual_bakfilename != NULL );
    assert( visual->nodenum == NULL );
+
+   visual->lastlowerbound = -SCIPsetInfinity(set);
 
    /* check whether we should initialize VBC output */
    if ( set->visual_vbcfilename[0] != '-' || set->visual_vbcfilename[1] != '\0' )
@@ -757,19 +760,29 @@ void SCIPvisualLowerbound(
 {
    assert(visual != NULL);
 
+   /* do not output if not required */
+   if ( ! set->visual_displb )
+      return;
+
    /* check, if VBC output should be created */
    if( visual->vbcfile == NULL )
       return;
 
-   /* determine external lower bound */
-   if( set->visual_objextern )
-      lowerbound = SCIPretransformObj(set->scip, lowerbound);
+   /* only output if lowerbound has improved and is finite */
+   if ( ! SCIPsetIsInfinity(set, lowerbound) && SCIPsetIsGT(set, lowerbound, visual->lastlowerbound) )
+   {
+      visual->lastlowerbound = lowerbound;
 
-   printTime(visual, stat, TRUE);
-   if( SCIPgetObjsense(set->scip) == SCIP_OBJSENSE_MINIMIZE )
-      SCIPmessageFPrintInfo(visual->messagehdlr, visual->vbcfile, "L %f\n", lowerbound);
-   else
-      SCIPmessageFPrintInfo(visual->messagehdlr, visual->vbcfile, "U %f\n", lowerbound);
+      /* determine external lower bound */
+      if( set->visual_objextern )
+         lowerbound = SCIPretransformObj(set->scip, lowerbound);
+
+      printTime(visual, stat, TRUE);
+      if( SCIPgetObjsense(set->scip) == SCIP_OBJSENSE_MINIMIZE )
+         SCIPmessageFPrintInfo(visual->messagehdlr, visual->vbcfile, "L %f\n", lowerbound);
+      else
+         SCIPmessageFPrintInfo(visual->messagehdlr, visual->vbcfile, "U %f\n", lowerbound);
+   }
 
    /* do nothing for BAK */
 }
